# progetto-TAI

./: feature_selection.py  main.py  preprocessing.py  pyproject.toml  readme
